<resources>
    <string name="app_name">Kartsat</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_rgister">rgister</string>
    <string name="title_activity_login">login</string>
    <string name="edit">Edit</string>
    <string name="send">Send</string>
    <string name="newSnap">New Snap</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello">hello</string>
    <string name="title_activity_upload">Upload</string>
    <string name="frame">Frame</string>
    <string name="save">Save</string>
    <string name="draw">Text</string>
    <string name="gallery">Gallery</string>
    <string name="rotate">Rotate</string>

</resources>
