<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Photo Preview"
        android:layout_gravity="center_vertical"
        android:gravity="center"/>

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="275dp"
        android:layout_height="289dp"
        android:id="@+id/photo_preview"
        android:adjustViewBounds="true"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="305dp"
        android:layout_height="68dp"
        android:id="@+id/btnGSend"
        android:layout_marginLeft="30dp"
        android:text="Send Photo From Gallery"
        android:layout_gravity="center_vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newSnap"
        android:id="@+id/btnNewSnap"
        android:layout_marginTop="20dp"
        android:layout_weight="0.42" />

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/btnEdit"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"

            android:layout_weight="0.23" />

        <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/btnSend"
        android:layout_marginLeft="30dp"
            android:layout_weight="0.38" />


    </LinearLayout>

</LinearLayout>